Changelog
---------

Version 0.9.x
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Version 0.9 - August 7, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for Genshi-templates.
  [malthe]

- Cleanup and refactoring of translation module.
  [malthe]
  
- If the template source contains a DOCTYPE declaration, output it
  during rendering. [chrism]

- Fixed an error where numeric entities specified in text or tail
  portions of elements would cause a UnicodeDecodeError to be raised
  on systems configured with an 'ascii' default encoding. [chrism]

- Refactored file system based cache a bit and added a simple benchmark for
  the cache. The initial load speed for a template goes down significantly
  with the cache. Compared to zope.pagetemplate we are only 3x slower,
  compared to 50x slower when cooking each template on process startup.

- Got rid entirely of the _escape function and inlined the actual code
  instead. We go up again to 12x for path and 19x for Python expressions :)
  [hannosch]

- Avoid string concatenation and use multiple write statements instead. These
  are faster now, since we use a list append internally.
  [hannosch]

- Inline the _escape function, because function calls are expensive in Python.
  Added missing escaping for Unicode values.
  [fschulze, hannosch]

- When templates are instantiated outside of a class-definition, a
  relative file path will be made absolute using the module path.
  [malthe]

- Simplified the _escape function handling by pulling in the str call into the
  function. Corrected the bigtable hotshot test to only benchmark rendering.

- Replaced the cgi.escape function by an optimized local version, we go up
  to 11x for path and 16x for Python expressions :) In the bigtable benchmark
  the enhancement is more noticable - we are the same speed as spitfire -O1
  templates now and just half the speed of -O3 :))

- Added a new benchmark test called bigtable that produces results which are